--- a/composer.json
+++ b/composer.json
@@ -39,14 +39,17 @@
         "arcanedev/log-viewer": "^9.0",
         "artesaos/seotools": "^1.0",
         "batyukovstudio/laravel-static-image": "dev-main",
+        "filament/filament": "^2.17",
+        "filament/spatie-laravel-media-library-plugin": "^2.0",
         "guzzlehttp/guzzle": "^7.5",
         "laravel/framework": "^9.2",
         "laravel/tinker": "^2.7",
         "laravelcollective/html": "^6.4",
         "lcobucci/clock": "2.1.0",
         "livewire/livewire": "^2.12",
+        "mohamedsabil83/filament-forms-tinyeditor": "^1.7",
         "predis/predis": "^2.2",
-        "spatie/laravel-medialibrary": "^10.10",
+        "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.9",
         "wikimedia/composer-merge-plugin": "^2.0.1"
     },
