--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "prettier": "^2.8.4",
+        "resolve-url-loader": "^5.0.0",
         "tailwindcss": "^3.2.6"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.0",
+        "sass": "^1.64.0",
+        "sass-loader": "^13.3.2"
     }
 }
